k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  clusterIP: None  # <- Headlessにする
  selector:
    app: postgres
  ports:
    - port: 5432
